# onnxruntime_backend

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: codeql.yml  main.yml  ok-to-test-command.yml  pre-commit.yml
cmake/: download_onnxruntime.cmake
src/: onnxruntime.cc  onnxruntime_loader.cc  onnxruntime_loader.h  onnxruntime_utils.cc  onnxruntime_utils.h
test/: jobs.yml
test/initializer_as_input/: generate_test_model.py  test.py
test/share_session/: README.md  test.py  test.sh
test/share_session/models/add_with_initializer_shared/: config.pbtxt
tools/: Dockerfile.ort  gen_ort_dockerfile.py  onnxruntime_cuda_header.patch
